// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DateField > should render correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
}

.emotion-2 {
  display: inherit;
}

.emotion-2[data-container-full-width="true"] {
  width: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-6>.emotion-9 {
  color: #3f4250;
}

.emotion-6>.emotion-9::-webkit-input-placeholder {
  color: #727683;
}

.emotion-6>.emotion-9::-moz-placeholder {
  color: #727683;
}

.emotion-6>.emotion-9:-ms-input-placeholder {
  color: #727683;
}

.emotion-6>.emotion-9::placeholder {
  color: #727683;
}

.emotion-6[data-success='true'] {
  border-color: #22674e;
}

.emotion-6[data-error='true'] {
  border-color: #b3144d;
}

.emotion-6[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-6[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-6[data-disabled='true']>.emotion-9 {
  color: #b5b7bd;
}

.emotion-6[data-disabled='true']>.emotion-9::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-6[data-disabled='true']>.emotion-9::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-6[data-disabled='true']>.emotion-9:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-6[data-disabled='true']>.emotion-9::placeholder {
  color: #b5b7bd;
}

.emotion-6:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-8[data-size='large'] {
  font-size: 1rem;
}

.emotion-8[data-size='small'] {
  padding-left: 0.5rem;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 0 1rem;
  border-left: 1px solid;
  border-color: inherit;
}

.emotion-12 {
  vertical-align: middle;
  fill: #3f4250;
  height: 1.25rem;
  width: 1.25rem;
  min-width: 1.25rem;
  min-height: 1.25rem;
}

.emotion-12 .fillStroke {
  stroke: #3f4250;
  fill: none;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
    >
      <div
        class="emotion-0 emotion-1"
      >
        <div
          aria-controls=":r0:"
          aria-describedby=":r0:"
          class="emotion-2 emotion-3"
          tabindex="0"
        >
          <div
            class="emotion-4 emotion-5"
          >
            <div>
              <div
                class="emotion-6 emotion-7"
                data-disabled="false"
                data-error="false"
                data-readonly="false"
                data-success="false"
              >
                <input
                  aria-invalid="false"
                  autocomplete="false"
                  class="emotion-8 emotion-9"
                  data-size="large"
                  id=":r1:"
                  name="test"
                  type="text"
                />
                <div
                  class="emotion-10 emotion-11"
                >
                  <svg
                    class="emotion-12 emotion-13"
                    viewBox="0 0 20 20"
                  >
                    <path
                      d="M5.57704 8C5.13096 8 4.76934 8.36162 4.76934 8.80769C4.76934 9.25377 5.13096 9.61539 5.57704 9.61539C6.02311 9.61539 6.38473 9.25377 6.38473 8.80769C6.38473 8.36162 6.02311 8 5.57704 8Z"
                    />
                    <path
                      d="M4.76934 10.9615C4.76934 10.5155 5.13096 10.1538 5.57704 10.1538C6.02311 10.1538 6.38473 10.5155 6.38473 10.9615C6.38473 11.4076 6.02311 11.7692 5.57704 11.7692C5.13096 11.7692 4.76934 11.4076 4.76934 10.9615Z"
                    />
                    <path
                      d="M10.4232 8C9.97711 8 9.6155 8.36162 9.6155 8.80769C9.6155 9.25377 9.97711 9.61539 10.4232 9.61539C10.8693 9.61539 11.2309 9.25377 11.2309 8.80769C11.2309 8.36162 10.8693 8 10.4232 8Z"
                    />
                    <path
                      d="M7.19242 8.80769C7.19242 8.36162 7.55404 8 8.00011 8C8.44619 8 8.8078 8.36162 8.8078 8.80769C8.8078 9.25377 8.44619 9.61539 8.00011 9.61539C7.55404 9.61539 7.19242 9.25377 7.19242 8.80769Z"
                    />
                    <path
                      d="M8.00011 10.1538C7.55404 10.1538 7.19242 10.5155 7.19242 10.9615C7.19242 11.4076 7.55404 11.7692 8.00011 11.7692C8.44619 11.7692 8.8078 11.4076 8.8078 10.9615C8.8078 10.5155 8.44619 10.1538 8.00011 10.1538Z"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M4.50011 1C4.05404 1 3.69242 1.36162 3.69242 1.80769V3.15385C2.50288 3.15385 1.53857 4.11816 1.53857 5.30769V12.8462C1.53857 14.0357 2.50288 15 3.69242 15H12.3078C13.4973 15 14.4617 14.0357 14.4617 12.8462V5.30769C14.4617 4.11816 13.4973 3.15385 12.3078 3.15385V1.80769C12.3078 1.36162 11.9462 1 11.5001 1C11.054 1 10.6924 1.36162 10.6924 1.80769V3.15385H5.3078V1.80769C5.3078 1.36162 4.94619 1 4.50011 1ZM3.15396 7.46154C3.15396 6.86677 3.63611 6.38462 4.23088 6.38462H11.7693C12.3641 6.38462 12.8463 6.86677 12.8463 7.46154V12.3077C12.8463 12.9025 12.3641 13.3846 11.7693 13.3846H4.23088C3.63611 13.3846 3.15396 12.9025 3.15396 12.3077V7.46154Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`DateField > should render correctly disabled 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
}

.emotion-2 {
  display: inherit;
}

.emotion-2[data-container-full-width="true"] {
  width: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-6>.emotion-9 {
  color: #3f4250;
}

.emotion-6>.emotion-9::-webkit-input-placeholder {
  color: #727683;
}

.emotion-6>.emotion-9::-moz-placeholder {
  color: #727683;
}

.emotion-6>.emotion-9:-ms-input-placeholder {
  color: #727683;
}

.emotion-6>.emotion-9::placeholder {
  color: #727683;
}

.emotion-6[data-success='true'] {
  border-color: #22674e;
}

.emotion-6[data-error='true'] {
  border-color: #b3144d;
}

.emotion-6[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-6[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-6[data-disabled='true']>.emotion-9 {
  color: #b5b7bd;
}

.emotion-6[data-disabled='true']>.emotion-9::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-6[data-disabled='true']>.emotion-9::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-6[data-disabled='true']>.emotion-9:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-6[data-disabled='true']>.emotion-9::placeholder {
  color: #b5b7bd;
}

.emotion-6:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-8[data-size='large'] {
  font-size: 1rem;
}

.emotion-8[data-size='small'] {
  padding-left: 0.5rem;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 0 1rem;
  border-left: 1px solid;
  border-color: inherit;
}

.emotion-12 {
  vertical-align: middle;
  fill: #b5b7bd;
  height: 1.25rem;
  width: 1.25rem;
  min-width: 1.25rem;
  min-height: 1.25rem;
}

.emotion-12 .fillStroke {
  stroke: #b5b7bd;
  fill: none;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
    >
      <div
        class="emotion-0 emotion-1"
      >
        <div
          aria-controls=":r3:"
          aria-describedby=":r3:"
          class="emotion-2 emotion-3"
          tabindex="0"
        >
          <div
            class="emotion-4 emotion-5"
          >
            <div>
              <div
                class="emotion-6 emotion-7"
                data-disabled="true"
                data-error="false"
                data-readonly="false"
                data-success="false"
              >
                <input
                  aria-invalid="false"
                  autocomplete="false"
                  class="emotion-8 emotion-9"
                  data-size="large"
                  disabled=""
                  id=":r4:"
                  name="test"
                  type="text"
                />
                <div
                  class="emotion-10 emotion-11"
                >
                  <svg
                    class="emotion-12 emotion-13"
                    viewBox="0 0 20 20"
                  >
                    <path
                      d="M5.57704 8C5.13096 8 4.76934 8.36162 4.76934 8.80769C4.76934 9.25377 5.13096 9.61539 5.57704 9.61539C6.02311 9.61539 6.38473 9.25377 6.38473 8.80769C6.38473 8.36162 6.02311 8 5.57704 8Z"
                    />
                    <path
                      d="M4.76934 10.9615C4.76934 10.5155 5.13096 10.1538 5.57704 10.1538C6.02311 10.1538 6.38473 10.5155 6.38473 10.9615C6.38473 11.4076 6.02311 11.7692 5.57704 11.7692C5.13096 11.7692 4.76934 11.4076 4.76934 10.9615Z"
                    />
                    <path
                      d="M10.4232 8C9.97711 8 9.6155 8.36162 9.6155 8.80769C9.6155 9.25377 9.97711 9.61539 10.4232 9.61539C10.8693 9.61539 11.2309 9.25377 11.2309 8.80769C11.2309 8.36162 10.8693 8 10.4232 8Z"
                    />
                    <path
                      d="M7.19242 8.80769C7.19242 8.36162 7.55404 8 8.00011 8C8.44619 8 8.8078 8.36162 8.8078 8.80769C8.8078 9.25377 8.44619 9.61539 8.00011 9.61539C7.55404 9.61539 7.19242 9.25377 7.19242 8.80769Z"
                    />
                    <path
                      d="M8.00011 10.1538C7.55404 10.1538 7.19242 10.5155 7.19242 10.9615C7.19242 11.4076 7.55404 11.7692 8.00011 11.7692C8.44619 11.7692 8.8078 11.4076 8.8078 10.9615C8.8078 10.5155 8.44619 10.1538 8.00011 10.1538Z"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M4.50011 1C4.05404 1 3.69242 1.36162 3.69242 1.80769V3.15385C2.50288 3.15385 1.53857 4.11816 1.53857 5.30769V12.8462C1.53857 14.0357 2.50288 15 3.69242 15H12.3078C13.4973 15 14.4617 14.0357 14.4617 12.8462V5.30769C14.4617 4.11816 13.4973 3.15385 12.3078 3.15385V1.80769C12.3078 1.36162 11.9462 1 11.5001 1C11.054 1 10.6924 1.36162 10.6924 1.80769V3.15385H5.3078V1.80769C5.3078 1.36162 4.94619 1 4.50011 1ZM3.15396 7.46154C3.15396 6.86677 3.63611 6.38462 4.23088 6.38462H11.7693C12.3641 6.38462 12.8463 6.86677 12.8463 7.46154V12.3077C12.8463 12.9025 12.3641 13.3846 11.7693 13.3846H4.23088C3.63611 13.3846 3.15396 12.9025 3.15396 12.3077V7.46154Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`DateField > should trigger events 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
}

.emotion-2 {
  display: inherit;
}

.emotion-2[data-container-full-width="true"] {
  width: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-6>.emotion-9 {
  color: #3f4250;
}

.emotion-6>.emotion-9::-webkit-input-placeholder {
  color: #727683;
}

.emotion-6>.emotion-9::-moz-placeholder {
  color: #727683;
}

.emotion-6>.emotion-9:-ms-input-placeholder {
  color: #727683;
}

.emotion-6>.emotion-9::placeholder {
  color: #727683;
}

.emotion-6[data-success='true'] {
  border-color: #22674e;
}

.emotion-6[data-error='true'] {
  border-color: #b3144d;
}

.emotion-6[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-6[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-6[data-disabled='true']>.emotion-9 {
  color: #b5b7bd;
}

.emotion-6[data-disabled='true']>.emotion-9::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-6[data-disabled='true']>.emotion-9::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-6[data-disabled='true']>.emotion-9:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-6[data-disabled='true']>.emotion-9::placeholder {
  color: #b5b7bd;
}

.emotion-6:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-8[data-size='large'] {
  font-size: 1rem;
}

.emotion-8[data-size='small'] {
  padding-left: 0.5rem;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 0 1rem;
  border-left: 1px solid;
  border-color: inherit;
}

.emotion-12 {
  vertical-align: middle;
  fill: #3f4250;
  height: 1.25rem;
  width: 1.25rem;
  min-width: 1.25rem;
  min-height: 1.25rem;
}

.emotion-12 .fillStroke {
  stroke: #3f4250;
  fill: none;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
    >
      <div
        class="emotion-0 emotion-1"
      >
        <div
          aria-controls=":r6:"
          aria-describedby=":r6:"
          class="emotion-2 emotion-3"
          tabindex="0"
        >
          <div
            class="emotion-4 emotion-5"
          >
            <div>
              <div
                class="emotion-6 emotion-7"
                data-disabled="false"
                data-error="false"
                data-readonly="false"
                data-success="false"
              >
                <input
                  aria-invalid="false"
                  autocomplete="false"
                  class="emotion-8 emotion-9"
                  data-size="large"
                  id=":r7:"
                  name="test"
                  placeholder="YYYY-MM-DD"
                  type="text"
                  value="9/15/2022"
                />
                <div
                  class="emotion-10 emotion-11"
                >
                  <svg
                    class="emotion-12 emotion-13"
                    viewBox="0 0 20 20"
                  >
                    <path
                      d="M5.57704 8C5.13096 8 4.76934 8.36162 4.76934 8.80769C4.76934 9.25377 5.13096 9.61539 5.57704 9.61539C6.02311 9.61539 6.38473 9.25377 6.38473 8.80769C6.38473 8.36162 6.02311 8 5.57704 8Z"
                    />
                    <path
                      d="M4.76934 10.9615C4.76934 10.5155 5.13096 10.1538 5.57704 10.1538C6.02311 10.1538 6.38473 10.5155 6.38473 10.9615C6.38473 11.4076 6.02311 11.7692 5.57704 11.7692C5.13096 11.7692 4.76934 11.4076 4.76934 10.9615Z"
                    />
                    <path
                      d="M10.4232 8C9.97711 8 9.6155 8.36162 9.6155 8.80769C9.6155 9.25377 9.97711 9.61539 10.4232 9.61539C10.8693 9.61539 11.2309 9.25377 11.2309 8.80769C11.2309 8.36162 10.8693 8 10.4232 8Z"
                    />
                    <path
                      d="M7.19242 8.80769C7.19242 8.36162 7.55404 8 8.00011 8C8.44619 8 8.8078 8.36162 8.8078 8.80769C8.8078 9.25377 8.44619 9.61539 8.00011 9.61539C7.55404 9.61539 7.19242 9.25377 7.19242 8.80769Z"
                    />
                    <path
                      d="M8.00011 10.1538C7.55404 10.1538 7.19242 10.5155 7.19242 10.9615C7.19242 11.4076 7.55404 11.7692 8.00011 11.7692C8.44619 11.7692 8.8078 11.4076 8.8078 10.9615C8.8078 10.5155 8.44619 10.1538 8.00011 10.1538Z"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M4.50011 1C4.05404 1 3.69242 1.36162 3.69242 1.80769V3.15385C2.50288 3.15385 1.53857 4.11816 1.53857 5.30769V12.8462C1.53857 14.0357 2.50288 15 3.69242 15H12.3078C13.4973 15 14.4617 14.0357 14.4617 12.8462V5.30769C14.4617 4.11816 13.4973 3.15385 12.3078 3.15385V1.80769C12.3078 1.36162 11.9462 1 11.5001 1C11.054 1 10.6924 1.36162 10.6924 1.80769V3.15385H5.3078V1.80769C5.3078 1.36162 4.94619 1 4.50011 1ZM3.15396 7.46154C3.15396 6.86677 3.63611 6.38462 4.23088 6.38462H11.7693C12.3641 6.38462 12.8463 6.86677 12.8463 7.46154V12.3077C12.8463 12.9025 12.3641 13.3846 11.7693 13.3846H4.23088C3.63611 13.3846 3.15396 12.9025 3.15396 12.3077V7.46154Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
